test/sh/error/misc/no_nested.sk
if false {
	export func() {
		# this will fail
	}
}

func()
